LINT refacto